<resources>
    <string name="app_name">Dialogs</string>
    <string name="txtCustomDialog">You successfully created your custom dialog!</string>
    <string name="txtSampleDialog">Simple Dialog</string>
    <string name="txtMultiDialog">Multi Element Dialog</string>
    <string name="txtYesNoDialog">Yes and No Dialog</string>
    <string name="txtAlertDialog">Alert Dialog</string>
    <string name="txtBtnCustom">Custom Dialog</string>
    <string name="txtProgress">Progress Dialog</string>
    <string name="txtProgressHorizontal">Progress Horizontal</string>

    <string name="txtTheme1">Custom theme1</string>
    <string name="txtTheme2">Custom theme2</string>
    <string name="txtRadioButtonDialog">Radio Button Dialog</string>
    <string name="txtCheckBoxDialog">Check Box Dialog</string>

</resources>
