<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_simple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/bg_btn"
            android:backgroundTint="@color/color1"
            android:text="@string/txtSampleDialog"
            android:textColor="@color/color5" />

        <Button
            android:id="@+id/btn_multi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/bg_btn"
            android:backgroundTint="@color/color6"
            android:text="@string/txtMultiDialog"
            android:textColor="@color/color5" />

        <Button
            android:id="@+id/btn_yes_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/bg_btn"
            android:backgroundTint="@color/color2"
            android:text="@string/txtYesNoDialog"

            android:textColor="@color/color5" />

        <Button
            android:id="@+id/btn_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/bg_btn"
            android:backgroundTint="@color/color3"
            android:text="@string/txtAlertDialog"
            android:textColor="@color/color5"

            />


        <Button
            android:id="@+id/btn_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/bg_btn"
            android:backgroundTint="@color/color4"
            android:text="@string/txtBtnCustom"
            android:textColor="@color/color5" />


    </LinearLayout>


</LinearLayout>